<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical" >

        <Button
            android:id="@+id/invite_vk"
            android:layout_width="200dp"
             android:layout_height="55dp"
            android:background="@drawable/key1_p"
            android:drawableLeft="@drawable/vk"
            android:paddingLeft="30dip"
            android:text="@string/invite_vk"
            android:layout_margin="7dp"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/invite_sms"
            android:layout_width="200dp"
             android:layout_height="55dp"
            android:background="@drawable/key2_p"
            android:paddingLeft="30dip"
            android:drawableLeft="@drawable/sms"
            android:text="@string/invite_sms"
            android:layout_margin="7dp"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/repost_vk"
            android:paddingLeft="30dip"
            android:layout_width="200dp"
             android:layout_height="55dp"
            android:background="@drawable/key3_p"
            android:drawableLeft="@drawable/vk_repost"
            android:text="@string/repost_vk"
            android:layout_margin="7dp"
            android:textColor="#FFFFFF" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="19dp"
        android:src="@drawable/invite" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView1"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="18dp"
        android:layout_marginRight="14dp"
        android:text="@string/invite"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/dark" />

</RelativeLayout>