<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="162dp"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/stat_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/old_pass" />

        <EditText
            android:id="@+id/edt_old_pass"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:gravity="center"
            android:background="#FFFFFF"
            android:ems="10" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
           android:layout_height="wrap_content"
            android:text="@string/new_pass" />

        <EditText
            android:id="@+id/edt_new_pass"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="#FFFFFF"
             android:gravity="center"
             android:inputType="textPassword"
            android:ems="10" />
            <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
           android:layout_height="wrap_content"
            android:text="@string/new_pass2" />

        <EditText
            android:id="@+id/edt_new_pass2"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="#FFFFFF"
             android:gravity="center"
             android:inputType="textPassword"
            android:ems="10" />

        <Button
            android:id="@+id/change_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/key1_p"
            android:text="@string/changepass"
            android:textColor="@color/simple_grey" />
         
    </LinearLayout>
    <ProgressBar
        android:id="@+id/bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone" />

    

</RelativeLayout>